--- a/code/package.json
+++ b/code/package.json
@@ -71,6 +71,7 @@
     "ms": "^2.0.0",
     "mysql": "^2.18.1",
     "negotiator": "^0.6.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
