--- a/code3/backend/package.json
+++ b/code3/backend/package.json
@@ -15,10 +15,14 @@
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
-    "mongoose": "^8.0.2"
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.0.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
+    "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
