--- a/code3/backend/package.json
+++ b/code3/backend/package.json
@@ -12,15 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
