--- a/code3/frontend/package.json
+++ b/code3/frontend/package.json
@@ -12,8 +12,10 @@
     "@types/node": "^16.18.67",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "bootstrap": "^5.3.2",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-scripts": "5.0.1",
