--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -21,7 +21,8 @@
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^8.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -29,6 +30,7 @@
     "@types/express-session": "^1.17.10",
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
