--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.17",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "date-fns": "^3.0.6",
     "moment": "^2.29.4",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
