--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.0.6",
     "moment": "^2.29.4",
     "nth-check": "^2.1.1",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
