--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -4,6 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "dist/server.js",
   "scripts": {
+    "build": "tsc",
     "start": "nodemon src/server.ts",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
