--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object":"^7.21.11",
     "@hookform/devtools": "^4.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
